Fixed - Gantt "Add New Task" popup, invisible text after receiving error.

--- a/themes/SuiteP/css/editview.scss
+++ b/themes/SuiteP/css/editview.scss
@@ -1196,6 +1196,7 @@ p.error {
 
 .error:empty {
   padding: 0;
+  color: #222;
 }
 
 div.content p.error {
